--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".AddNoteActivity"
+            android:label="Add Note"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".MainActivity"
+            android:label="Note App">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
